@@ -5,6 +5,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Changes to version 6.0.2 (since 6.0.1):
 * devices
   - more robust NMEA checksum parser
+  - CAI302: restart I/O thread after declaration failure
 * user interface
   - Language: translation updates
   - Language: add Spanish translation
